# GratingMagic

./: CMakeLists.txt  GratingMagic.psd  INSTRUCTIONS.md  README.md  help_guide.md  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  stylesheet.qss
resources/: GratingMagic.rc
